added some comments

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--here we used constraintlayout to reduce the complexity of positioning the UI components-->
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/loginFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
