--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--here we used constraintlayout to reduce the complexity of nested layouts
+
+used shoeItem to show the data this is just product card-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -65,7 +69,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text='@{"description: " + shoeItem.describtion}'
+                android:text='@{"description: " + shoeItem.description}'
                 android:textSize="20sp"
                 android:textColor="@color/white"
 
