--- a/app/src/main/res/layout/fragment_add_shoe.xml
+++ b/app/src/main/res/layout/fragment_add_shoe.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--here is the add   shoe screen which is just text views and editable textfield-->
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
     tools:context=".ui.AddShoe.AddShoeFragment">
 
-    <data>
-        <variable name="shoeItem" type="com.example.shoe_store.model.ShoeItem"/>
-        <variable name="shoeViewModel" type="com.example.shoe_store.SharedShoeListViewModel"/>
-    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -32,7 +30,6 @@
             android:layout_width="250dp"
             android:layout_height="41dp"
             android:ems="10"
-            android:text='@={shoeViewModel.newItem.shoeName}'
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.902"
@@ -60,7 +57,6 @@
             android:layout_height="40dp"
             android:layout_marginTop="64dp"
             android:ems="10"
-            android:text='@={shoeItem.companyName}'
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.975"
@@ -87,7 +83,6 @@
             android:layout_height="40dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={shoeItem.shoeSize}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.975"
@@ -114,7 +109,6 @@
             android:layout_height="40dp"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:text='@={shoeItem.describtion}'
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.975"
